--- a/10_radar_spinner/style.css
+++ b/10_radar_spinner/style.css
@@ -9,7 +9,7 @@
   position: relative;
 }
 
-.radar-spinner .circle {
+.radar-spinner ,.circle {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -18,35 +18,35 @@
   animation: radar-spinner-animation 2s infinite;
 }
 
-.radar-spinner .circle:nth-child(1) {
+.radar-spinner,.circle:nth-child(1) {
   padding: calc(60px * 5 * 2 * 0 / 110);
   animation-delay: 300ms;
 }
 
-.radar-spinner .circle:nth-child(2) {
+.radar-spinner,.circle:nth-child(2) {
   padding: calc(60px * 5 * 2 * 1 / 110);
   animation-delay: 300ms;
 }
 
-.radar-spinner .circle:nth-child(3) {
+.radar-spinner,.circle:nth-child(3) {
   padding: calc(60px * 5 * 2 * 2 / 110);
   animation-delay: 300ms;
 }
 
-.radar-spinner .circle:nth-child(4) {
+.radar-spinner,.circle:nth-child(4) {
   padding: calc(60px * 5 * 2 * 3 / 110);
   animation-delay: 0ms;
 }
 
-.radar-spinner .circle-inner,
-.radar-spinner .circle-inner-container {
+.radar-spinner,.circle-inner,
+.radar-spinner,.circle-inner-container {
   height: 100%;
   width: 100%;
   border-radius: 50%;
   border: calc(60px * 5 / 110) solid transparent;
 }
 
-.radar-spinner .circle-inner {
+.radar-spinner,.circle-inner {
   border-left-color: #ff1d5e;
   border-right-color: #ff1d5e;
 }
